// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Orcid  should display error if ORCID url redirect STATE response is invalid 1`] = `
<StandardPage
  title="Link ORCID ID to UQ eSpace"
>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "Cancel",
        "confirmButtonLabel": "OK",
        "confirmationMessage": <div>
          <p>
            In order to proceed you will now be directed to ORCID.org website.
          </p>
          <p>
            You will be redirected back after you have granted UQ access.
          </p>
        </div>,
        "confirmationTitle": "ORCID Grant Access",
      }
    }
    onRef={[Function]}
  />
  <ForwardRef(Grid)
    container={true}
    spacing={3}
  >
    <ForwardRef(Grid)
      item={true}
      xs={12}
    >
      <Alert
        alertId="alert-error"
        allowDismiss={false}
        customIcon={null}
        customType={null}
        disableAlertClick={false}
        dismissTitle="Click to dismiss this alert"
        message="Error has occurred during request and request cannot be processed. Invalid authorisation state response from ORCID.  Please contact eSpace administrators or try again later."
        orcidStateError="Invalid authorisation state response from ORCID. "
        showLoader={false}
        title="Error"
        type="error_outline"
        wiggle={null}
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        title="I already have an ORCID iD"
      >
        <ForwardRef(Typography)
          component="span"
          gutterBottom={true}
        >
          This option enables you to link your existing ORCID iD to UQ.
        </ForwardRef(Typography)>
        <ForwardRef(Grid)
          container={true}
          spacing={2}
        >
          <ForwardRef(Grid)
            item={true}
            sx={
              Object {
                "display": Object {
                  "sm": "block",
                  "xs": "none",
                },
              }
            }
            xs={true}
          />
          <ForwardRef(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <ForwardRef(Button)
              color="primary"
              disabled={false}
              fullWidth={true}
              onClick={[Function]}
              variant="contained"
            >
              Link your existing ORCID iD
            </ForwardRef(Button)>
          </ForwardRef(Grid)>
        </ForwardRef(Grid)>
      </StandardCard>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        title="I need an ORCID iD"
      >
        <ForwardRef(Typography)
          component="span"
          gutterBottom={true}
        >
          <p>
            This option enables you to create a new ORCID iD and link it with UQ.
          </p>
          <p>
            Use this option if you are unsure if you already have an ORCID iD. It will detect matches to your name and email from the ORCID registry and prompt you to log in to avoid creating a new ORCID iD.
          </p>
        </ForwardRef(Typography)>
        <ForwardRef(Grid)
          container={true}
          spacing={2}
        >
          <ForwardRef(Grid)
            item={true}
            sx={
              Object {
                "display": Object {
                  "sm": "block",
                  "xs": "none",
                },
              }
            }
            xs={true}
          />
          <ForwardRef(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <ForwardRef(Button)
              color="primary"
              disabled={false}
              fullWidth={true}
              onClick={[Function]}
              variant="contained"
            >
              Create a new ORCID iD
            </ForwardRef(Button)>
          </ForwardRef(Grid)>
        </ForwardRef(Grid)>
      </StandardCard>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</StandardPage>
`;

exports[`Component Orcid  should display error if author update failed 1`] = `
<StandardPage
  title="Link ORCID ID to UQ eSpace"
>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "Cancel",
        "confirmButtonLabel": "OK",
        "confirmationMessage": <div>
          <p>
            In order to proceed you will now be directed to ORCID.org website.
          </p>
          <p>
            You will be redirected back after you have granted UQ access.
          </p>
        </div>,
        "confirmationTitle": "ORCID Grant Access",
      }
    }
    onRef={[Function]}
  />
  <ForwardRef(Grid)
    container={true}
    spacing={3}
  >
    <ForwardRef(Grid)
      item={true}
      xs={12}
    >
      <Alert
        alertId="alert-error"
        allowDismiss={false}
        customIcon={null}
        customType={null}
        disableAlertClick={false}
        dismissTitle="Click to dismiss this alert"
        message="Error has occurred during request and request cannot be processed. API IS NOT AVAILABLE Please contact eSpace administrators or try again later."
        orcidStateError="Invalid authorisation state response from ORCID. "
        showLoader={false}
        title="Error"
        type="error_outline"
        wiggle={null}
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        title="I already have an ORCID iD"
      >
        <ForwardRef(Typography)
          component="span"
          gutterBottom={true}
        >
          This option enables you to link your existing ORCID iD to UQ.
        </ForwardRef(Typography)>
        <ForwardRef(Grid)
          container={true}
          spacing={2}
        >
          <ForwardRef(Grid)
            item={true}
            sx={
              Object {
                "display": Object {
                  "sm": "block",
                  "xs": "none",
                },
              }
            }
            xs={true}
          />
          <ForwardRef(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <ForwardRef(Button)
              color="primary"
              disabled={false}
              fullWidth={true}
              onClick={[Function]}
              variant="contained"
            >
              Link your existing ORCID iD
            </ForwardRef(Button)>
          </ForwardRef(Grid)>
        </ForwardRef(Grid)>
      </StandardCard>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        title="I need an ORCID iD"
      >
        <ForwardRef(Typography)
          component="span"
          gutterBottom={true}
        >
          <p>
            This option enables you to create a new ORCID iD and link it with UQ.
          </p>
          <p>
            Use this option if you are unsure if you already have an ORCID iD. It will detect matches to your name and email from the ORCID registry and prompt you to log in to avoid creating a new ORCID iD.
          </p>
        </ForwardRef(Typography)>
        <ForwardRef(Grid)
          container={true}
          spacing={2}
        >
          <ForwardRef(Grid)
            item={true}
            sx={
              Object {
                "display": Object {
                  "sm": "block",
                  "xs": "none",
                },
              }
            }
            xs={true}
          />
          <ForwardRef(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <ForwardRef(Button)
              color="primary"
              disabled={false}
              fullWidth={true}
              onClick={[Function]}
              variant="contained"
            >
              Create a new ORCID iD
            </ForwardRef(Button)>
          </ForwardRef(Grid)>
        </ForwardRef(Grid)>
      </StandardCard>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</StandardPage>
`;

exports[`Component Orcid  should render form uf account/author is set 1`] = `
<StandardPage
  title="Link ORCID ID to UQ eSpace"
>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "Cancel",
        "confirmButtonLabel": "OK",
        "confirmationMessage": <div>
          <p>
            In order to proceed you will now be directed to ORCID.org website.
          </p>
          <p>
            You will be redirected back after you have granted UQ access.
          </p>
        </div>,
        "confirmationTitle": "ORCID Grant Access",
      }
    }
    onRef={[Function]}
  />
  <ForwardRef(Grid)
    container={true}
    spacing={3}
  >
    <ForwardRef(Grid)
      item={true}
      xs={12}
    />
    <ForwardRef(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        title="I already have an ORCID iD"
      >
        <ForwardRef(Typography)
          component="span"
          gutterBottom={true}
        >
          This option enables you to link your existing ORCID iD to UQ.
        </ForwardRef(Typography)>
        <ForwardRef(Grid)
          container={true}
          spacing={2}
        >
          <ForwardRef(Grid)
            item={true}
            sx={
              Object {
                "display": Object {
                  "sm": "block",
                  "xs": "none",
                },
              }
            }
            xs={true}
          />
          <ForwardRef(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <ForwardRef(Button)
              color="primary"
              disabled={false}
              fullWidth={true}
              onClick={[Function]}
              variant="contained"
            >
              Link your existing ORCID iD
            </ForwardRef(Button)>
          </ForwardRef(Grid)>
        </ForwardRef(Grid)>
      </StandardCard>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        title="I need an ORCID iD"
      >
        <ForwardRef(Typography)
          component="span"
          gutterBottom={true}
        >
          <p>
            This option enables you to create a new ORCID iD and link it with UQ.
          </p>
          <p>
            Use this option if you are unsure if you already have an ORCID iD. It will detect matches to your name and email from the ORCID registry and prompt you to log in to avoid creating a new ORCID iD.
          </p>
        </ForwardRef(Typography)>
        <ForwardRef(Grid)
          container={true}
          spacing={2}
        >
          <ForwardRef(Grid)
            item={true}
            sx={
              Object {
                "display": Object {
                  "sm": "block",
                  "xs": "none",
                },
              }
            }
            xs={true}
          />
          <ForwardRef(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <ForwardRef(Button)
              color="primary"
              disabled={false}
              fullWidth={true}
              onClick={[Function]}
              variant="contained"
            >
              Create a new ORCID iD
            </ForwardRef(Button)>
          </ForwardRef(Grid)>
        </ForwardRef(Grid)>
      </StandardCard>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</StandardPage>
`;

exports[`Component Orcid  should render nothing if account is set, but author is null 1`] = `<div />`;

exports[`Component Orcid  should render nothing if account/author is not loaded 1`] = `<div />`;
